test: add docker build with CI

--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -10,6 +10,7 @@ on:
 
 env:
   image-name: ghcr.io/npmulder/cryptovault-api:${{ github.sha }}
+  image-name-unit-tests: unit-tests:latest
 
 jobs:
   build-and-publish:
@@ -18,6 +19,19 @@ jobs:
     steps:
     - name: Checkout the repo
       uses: actions/checkout@v2
+
+    - name: Unit tests [build]
+      run: docker build --target unit-test -t ${{ env.image-name-unit-tests }} .
+
+    - name: Unit tests [run]
+      run: docker run --rm -v ${{ github.workspace }}/path/to/artifacts/testresults:/code/Tests/CryptoVault.Api.IntegrationTests/TestResults ${{ env.image-name-unit-tests }}
+    
+    - name: Unit tests [results]  
+      uses: actions/upload-artifact@v2
+      if: always()
+      with:
+        name: unit-test-results
+        path: ${{ github.workspace }}/path/to/artifacts/testresults/test_results_unit_test.trx
       
     - name: Build docker image
       run: docker build . -t ${{ env.image-name }}
