--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -41,6 +41,12 @@ jobs:
         path: ${{ github.workspace }}/path/to/artifacts/testresults/test_results_unit_test.trx
         reporter: dotnet-trx
         token: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Code coverage [codecov]
+      uses: codecov/codecov-action@v1.2.1
+      with:
+        files: ${{ github.workspace }}/path/to/artifacts/testresults/coverage.info
+        verbose: true
       
     - name: Build docker image
       run: docker build . -t ${{ env.image-name }}
