--- a/.github/codecov.yml
+++ b/.github/codecov.yml
@@ -5,5 +5,5 @@ coverage:
   status:
     project:
       default:
-        target: 30%    # the required coverage value
-        threshold: 1%  # the leniency in hitting the target
+        target: 80%    # the required coverage value
+        threshold: 1%  # the leniency in hitting the target# the leniency in hitting the target
