feat: remove codecov and add CodeClimate

--- a/.github/workflows/ci-pull-request.yml
+++ b/.github/workflows/ci-pull-request.yml
@@ -27,11 +27,13 @@ jobs:
       - name: Unit tests [run]
         run: docker run --rm -v ${{ github.workspace }}/path/to/artifacts/testresults:/code/Tests/CryptoVault.Api.IntegrationTests/TestResults ${{ env.image-name-unit-tests }}
 
-      - name: Code coverage [codecov]
-        uses: codecov/codecov-action@v1.2.1
+      - name: Code coverage [Code Climate]
+        uses: paambaati/codeclimate-action@v2.7.5
+        env: 
+          CC_TEST_REPORTER_ID: ${{secrets.CC_TEST_REPORTER_ID}}
         with:
-          files: ${{ github.workspace }}/path/to/artifacts/testresults/coverage.info
-          verbose: true
+          coverageLocations: ${{ github.workspace }}/path/to/artifacts/testresults/coverage.info:lcov
+          prefix: /code/
 
       - name: App [build]
         run: docker build -t ${{ env.image-name }} .
