feat: add Serilog and Seq

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,6 @@ services:
     image: cryptovaultapi
     build:
       context: .
-      dockerfile: src/CryptoVault.Api/Dockerfile
+      dockerfile: Dockerfile
     ports:
       - 80:80
